--- a/forms.html
+++ b/forms.html
@@ -2821,7 +2821,7 @@
                            class="form-control" 
                            name="full_name" 
                            id="full_name"
-                           placeholder="Enter student's full name" 
+                           placeholder="Enter student's full name / വിദ്യാർത്ഥിയുടെ പൂർണ്ണമായ പേര് നൽകുക" 
                            required>
                     <div class="input-icon">
                       <i class="fas fa-user-check"></i>
@@ -2839,7 +2839,7 @@
                            class="form-control" 
                            name="house_name" 
                            id="house_name"
-                           placeholder="House name">
+                           placeholder="House name / വീട്ടുപേര്">
                     <div class="input-icon">
                       <i class="fas fa-house-user"></i>
                     </div>
@@ -2869,7 +2869,7 @@
                       <span class="malayalam-text">ലിംഗം</span>
                     </label>
                     <select class="form-select" name="gender" id="gender" required>
-                      <option value="" selected disabled>Choose gender...</option>
+                      <option value="" selected disabled>Choose gender... / ലിംഗം തിരഞ്ഞെടുക്കുക...</option>
                       <option value="Male">Male / ആൺ</option>
                       <option value="Female">Female / പെൺ</option>
                     </select>
@@ -2886,7 +2886,7 @@
                       <span class="malayalam-text">അപേക്ഷിക്കുന്ന ക്ലാസ്</span>
                     </label>
                     <select class="form-select" name="class_level" id="class_level" required>
-                      <option value="" selected disabled>Select class...</option>
+                      <option value="" selected disabled>Select class / ക്ലാസ് തിരഞ്ഞെടുക്കുക...</option>
                       <option value="1">Class 1</option>
                       <option value="2">Class 2</option>
                       <option value="3">Class 3</option>
@@ -2915,7 +2915,7 @@
                            class="form-control" 
                            name="guardian_name" 
                            id="guardian_name"
-                           placeholder="Full name of parent/guardian" 
+                           placeholder="Full name of parent/guardian / രക്ഷിതാവിന്റെ പൂർണ്ണമായ പേര്" 
                            required>
                     <div class="input-icon">
                       <i class="fas fa-user-friends"></i>
@@ -2943,6 +2943,22 @@
                     <div class="invalid-feedback">Please enter a valid 10-digit phone number.</div>
                   </div>
 
+                  <div class="col-md-6 form-group">
+                    <label class="form-label bilingual-label">
+                      <i class="fas fa-envelope me-1"></i>
+                      <span class="english-text">Email Address</span>
+                      <span class="malayalam-text">ഇമെയിൽ വിലാസം</span>
+                    </label>
+                    <input type="email" 
+                           class="form-control" 
+                           name="email" 
+                           id="email"
+                           placeholder="Email address (optional) / ഇമെയിൽ വിലാസം (ഓപ്ഷണൽ)">
+                    <div class="input-icon">
+                      <i class="fas fa-at"></i>
+                    </div>
+                  </div>
+
                   <div class="col-12 form-group">
                     <label class="form-label required bilingual-label">
                       <i class="fas fa-map-marker-alt me-1"></i>
@@ -2953,7 +2969,7 @@
                               name="address" 
                               id="address"
                               rows="3" 
-                              placeholder="Full postal address with PIN code" 
+                              placeholder="Full postal address with PIN code / പിൻകോഡ് ഉൾപ്പെടെയുള്ള മുഴുവൻ തപാൽ വിലാസം" 
                               required></textarea>
                     <div class="input-icon">
                       <i class="fas fa-map-pin"></i>
@@ -2972,7 +2988,7 @@
                            class="form-control" 
                            name="aadhar_number" 
                            id="aadhar_number"
-                           placeholder="12-digit Aadhar number"
+                           placeholder="12-digit Aadhar number / 12 അക്ക ആധാർ നമ്പർ"
                            pattern="[0-9]{12}"
                            maxlength="12">
                     <div class="input-icon">
@@ -2991,7 +3007,7 @@
                            class="form-control" 
                            name="previous_madrasa" 
                            id="previous_madrasa"
-                           placeholder="Name of previous madrasa (if any)">
+                           placeholder="Name of previous madrasa (if any) / മുമ്പത്തെ മദ്രസയുടെ പേര് (ഉണ്ടെങ്കിൽ)">
                     <div class="input-icon">
                       <i class="fas fa-university"></i>
                     </div>
@@ -3008,7 +3024,7 @@
                               name="additional_info" 
                               id="additional_info"
                               rows="2" 
-                              placeholder="Any other information"></textarea>
+                              placeholder="Any other information / മറ്റേതെങ്കിലും വിവരങ്ങൾ"></textarea>
                     <div class="input-icon">
                       <i class="fas fa-info-circle"></i>
                     </div>
@@ -3040,7 +3056,7 @@
           <!-- Phone Access Tab -->
           <div class="form-tab-content" id="phoneAccessTab">
             <!-- =========================================== -->
-            <!-- PHONE NUMBER ACCESS FEATURE  -->
+            <!-- PHONE NUMBER ACCESS FEATURE - NO OTP REQUIRED -->
             <!-- =========================================== -->
             <div class="access-feature" id="phoneAccessFeature">
               <div class="access-header">
@@ -3050,6 +3066,7 @@
                 </h2>
                 <p class="access-description">
                   Enter your phone number to view, track, and manage your submitted applications.
+                  No verification code required - direct access for your convenience.
                 </p>
               </div>
 
@@ -3093,7 +3110,7 @@
                     <input type="tel" 
                            class="form-control" 
                            id="accessPhone"
-                           placeholder="Enter 10-digit mobile number" 
+                           placeholder="Enter 10-digit mobile number / 10 അക്ക മൊബൈൽ നമ്പർ" 
                            required
                            pattern="[0-9]{10}"
                            maxlength="10">
@@ -3139,7 +3156,8 @@
                   Admin Panel - Manage Applications
                 </h2>
                 <p class="form-description">
-                  Admin access.
+                  Admin access to view, search, and update application statuses. 
+                  Only authorized personnel can access this panel.
                 </p>
               </div>
 
@@ -3148,12 +3166,13 @@
                 <div class="form-group">
                   <label class="form-label required bilingual-label">
                     <i class="fas fa-lock me-1"></i>
-                    <span class="english-text">Password</span>
+                    <span class="english-text">Admin Password</span>
+                    <span class="malayalam-text">അഡ്മിൻ പാസ്സ്‌വേഡ്</span>
                   </label>
                   <input type="password" 
                         class="form-control" 
                         id="adminPassword"
-                        placeholder="Enter password">
+                        placeholder="Enter admin password / അഡ്മിൻ പാസ്സ്‌വേഡ് നൽകുക">
                   <div class="input-icon">
                     <i class="fas fa-key"></i>
                   </div>
@@ -3417,6 +3436,10 @@
                     <span class="badge bg-success" id="receiptStatusBadgeInline">Submitted for Review</span>
                   </div>
                 </div>
+                <div class="detail-row">
+                  <div class="info-label">Expected Processing</div>
+                  <div class="info-value">2-3 working days</div>
+                </div>
               </div>
               
               <!-- Important Instructions -->
@@ -3449,7 +3472,7 @@
                   </div>
                   <div>
                     <h6 style="margin: 0 0 5px 0;">Processing Time</h6>
-                    <p style="margin: 0;">Your application will be processed within 1-3 working days. You'll be contacted for any additional information needed.</p>
+                    <p style="margin: 0;">Your application will be processed within 2-3 working days. You'll be contacted for any additional information needed.</p>
                   </div>
                 </div>
               </div>
@@ -3459,7 +3482,7 @@
                 <div class="signature-box">
                   <div class="receipt-card-title">
                     <i class="fas fa-user-check"></i>
-                    GUARDIAN
+                    STUDENT/GUARDIAN
                   </div>
                   <div class="signature-line"></div>
                   <div class="mt-2">
@@ -3475,8 +3498,20 @@
                   </div>
                   <div class="signature-line"></div>
                   <div class="mt-2">
-                    <div>Suhail P</div>
-                    <small class="text-muted">Swadar Muallim</small>
+                    <div>Muhammed Rafeeq</div>
+                    <small class="text-muted">Admission Officer</small>
+                  </div>
+                </div>
+                
+                <div class="signature-box">
+                  <div class="receipt-card-title">
+                    <i class="fas fa-stamp"></i>
+                    MADRASA SEAL
+                  </div>
+                  <div class="signature-line"></div>
+                  <div class="mt-2">
+                    <div>Noorussalam Madrasa</div>
+                    <small class="text-muted">Official Stamp</small>
                   </div>
                 </div>
               </div>
