--- a/forms.html
+++ b/forms.html
@@ -3110,7 +3110,7 @@
                     <input type="tel" 
                            class="form-control" 
                            id="accessPhone"
-                           placeholder="Enter 10-digit mobile number / 10 അക്ക മൊബൈൽ നമ്പർ" 
+                           placeholder="Enter 10-digit mobile number" 
                            required
                            pattern="[0-9]{10}"
                            maxlength="10">
@@ -3167,12 +3167,11 @@
                   <label class="form-label required bilingual-label">
                     <i class="fas fa-lock me-1"></i>
                     <span class="english-text">Admin Password</span>
-                    <span class="malayalam-text">അഡ്മിൻ പാസ്സ്‌വേഡ്</span>
                   </label>
                   <input type="password" 
                         class="form-control" 
                         id="adminPassword"
-                        placeholder="Enter admin password / അഡ്മിൻ പാസ്സ്‌വേഡ് നൽകുക">
+                        placeholder="Enter admin password">
                   <div class="input-icon">
                     <i class="fas fa-key"></i>
                   </div>
@@ -3219,12 +3218,11 @@
                       <label class="form-label bilingual-label">
                         <i class="fas fa-search me-1"></i>
                         <span class="english-text">Search Applications</span>
-                        <span class="malayalam-text">അപേക്ഷകൾ തിരയുക</span>
                       </label>
                       <input type="text" 
                             class="form-control" 
                             id="adminSearch"
-                            placeholder="Search by name, phone, or reference ID / പേര്, ഫോൺ, റഫറൻസ് ഐഡി ഉപയോഗിച്ച് തിരയുക">
+                            placeholder="Search by name, phone, or reference ID">
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -3232,14 +3230,13 @@
                       <label class="form-label bilingual-label">
                         <i class="fas fa-filter me-1"></i>
                         <span class="english-text">Filter by Status</span>
-                        <span class="malayalam-text">സ്റ്റാറ്റസ് പ്രകാരം ഫിൽട്ടർ ചെയ്യുക</span>
                       </label>
                       <select class="form-select" id="adminStatusFilter">
-                        <option value="all">All Status / എല്ലാ സ്റ്റാറ്റസും</option>
-                        <option value="pending">Pending / പെൻഡിംഗ്</option>
-                        <option value="under_review">Under Review / അവലോകനത്തിൽ</option>
-                        <option value="approved">Approved / അംഗീകരിച്ചു</option>
-                        <option value="rejected">Rejected / നിരസിച്ചു</option>
+                        <option value="all">All Status</option>
+                        <option value="pending">Pending</option>
+                        <option value="under_review">Under Review</option>
+                        <option value="approved">Approved</option>
+                        <option value="rejected">Rejected</option>
                       </select>
                     </div>
                   </div>
