--- a/forms.html
+++ b/forms.html
@@ -2839,7 +2839,7 @@
                            class="form-control" 
                            name="house_name" 
                            id="house_name"
-                           placeholder="House name / വീട്ടുപേര്">
+                           placeholder="House name">
                     <div class="input-icon">
                       <i class="fas fa-house-user"></i>
                     </div>
