--- a/forms.html
+++ b/forms.html
@@ -2984,8 +2984,8 @@
                   <div class="col-md-6 form-group">
                     <label class="form-label required bilingual-label">
                       <i class="fas fa-user me-1"></i>
-                      <span class="english-text">Full Name</span>
-                      <span class="malayalam-text">പൂർണ്ണമായ പേര്</span>
+                      <span class="english-text">Name of Student with initials</span>
+                      <span class="malayalam-text">വിദ്യാര്‍ത്ഥിയുടെ പേരും, ഇനീഷ്യലും</span>
                     </label>
                     <input type="text" 
                            class="form-control" 
@@ -3171,8 +3171,8 @@
                   <div class="col-12 form-group">
                     <label class="form-label bilingual-label">
                       <i class="fas fa-sticky-note me-1"></i>
-                      <span class="english-text">Additional Information</span>
-                      <span class="malayalam-text">അധിക വിവരങ്ങൾ</span>
+                      <span class="english-text">Additional Information if any</span>
+                      <span class="malayalam-text">അധിക വിവരങ്ങൾ ഉണ്ടെങ്കില്‍</span>
                     </label>
                     <textarea class="form-control" 
                               name="additional_info" 
