--- a/forms.html
+++ b/forms.html
@@ -3455,8 +3455,8 @@
                 <div class="receipt-logo">
                   <img src="https://i.ibb.co/GmW5YpC/LOGO-NSM-copy.png" alt="NSM Logo">
                 </div>
-                <h1 class="receipt-title">ADMISSION APPLICATION RECEIPT</h1>
-                <p class="receipt-subtitle">Official Confirmation • Academic Year 2026-27</p>
+                <h1 class="receipt-title">NOORUSSALAM MADRASA KAMBIPPALAM</h1>
+                <p class="receipt-subtitle">Admission Application Official Confirmation • Academic Year 2026-27</p>
                 <div class="receipt-badge" id="receiptStatusBadge">
                   <i class="fas fa-check-circle"></i>
                   SUBMITTED SUCCESSFULLY
@@ -3612,17 +3612,13 @@
                   <i class="fas fa-download"></i>
                   DOWNLOAD AS PDF
                 </button>
-                <button class="print-btn" onclick="window.print()">
-                  <i class="fas fa-print"></i>
-                  PRINT RECEIPT
-                </button>
               </div>
               
               <!-- Footer Note -->
               <div class="receipt-footer">
                 <p class="mb-1">
                   <i class="fas fa-info-circle me-1"></i>
-                  This is a computer generated receipt. No physical signature required.
+                  This is a computer generated receipt.
                 </p>
                 <p class="mb-0">Noorussalam Madrasa, Kambippalam • SKIMVB Reg No: 6110</p>
               </div>
