--- a/forms.html
+++ b/forms.html
@@ -3000,7 +3000,7 @@
                   </div>
 
                   <div class="col-md-6 form-group">
-                    <label class="form-label bilingual-label">
+                    <label class="form-label required bilingual-label">
                       <i class="fas fa-home me-1"></i>
                       <span class="english-text">House Name</span>
                       <span class="malayalam-text">വീട്ടു പേര്</span>
