--- a/forms.html
+++ b/forms.html
@@ -804,13 +804,10 @@
         <i class="fas fa-file-contract me-2"></i>ONLINE ADMISSION PORTAL 2026-27
       </div>
       <h1 class="hero-title english">New Student Admission</h1>
-      <h2 class="hero-title-ml malayalam">പുതിയ വിദ്യാർത്ഥി പ്രവേശനം</h2>
-      <p class="hero-subtitle english">Apply online for the academic year 2026-27. Fill in the required details below and submit your application.</p>
       <p class="hero-subtitle-ml malayalam">2026-27 അക്കാദമിക് വർഷത്തിനായി ഓൺലൈൻ അപേക്ഷിക്കുക. ചുവടെയുള്ള ആവശ്യമായ വിവരങ്ങൾ പൂരിപ്പിച്ച് അപേക്ഷ സമർപ്പിക്കുക.</p>
       <div style="color: rgba(255, 255, 255, 0.8); font-size: 0.9rem;">
         <i class="fas fa-exclamation-circle me-1"></i>
         <span class="english">Fields marked with <span class="text-warning fw-bold">*</span> are required</span>
-        <span class="malayalam"> | <span class="text-warning fw-bold">*</span> ചിഹ്നമുള്ള ഫീൽഡുകൾ ആവശ്യമാണ്</span>
       </div>
     </div>
   </div>
@@ -839,12 +836,7 @@
         <i class="fas fa-user-graduate me-2" style="color: var(--accent);"></i>
         Student Admission Form
       </h2>
-      <h3 class="form-title-ml malayalam">
-        <i class="fas fa-user-graduate me-2" style="color: var(--accent);"></i>
-        വിദ്യാർത്ഥി പ്രവേശന ഫോം
-      </h3>
-      <p class="form-subtitle english">Please fill all the required fields accurately. All information will be kept confidential.</p>
-      <p class="form-subtitle-ml malayalam">എല്ലാ ആവശ്യമായ ഫീൽഡുകളും കൃത്യമായി പൂരിപ്പിക്കുക. എല്ലാ വിവരങ്ങളും രഹസ്യമായി സൂക്ഷിക്കപ്പെടും.</p>
+      <p class="form-subtitle-ml malayalam">എല്ലാ ആവശ്യമായ ഫീൽഡുകളും കൃത്യമായി പൂരിപ്പിക്കുക.</p>
     </div>
 
     <!-- Admission Form -->
@@ -855,17 +847,15 @@
           <div class="label-group">
             <div class="label-main english required">
               <i class="fas fa-user me-1"></i>
-              Full Name
+              Name of Student with initials 
             </div>
-            <div class="label-sub malayalam">പൂർണ്ണമായ പേര്</div>
+            <div class="label-sub malayalam">വിദ്യാര്‍ത്ഥിയുടെ പേരും, ഇനീഷ്യലും</div>
             <input type="text" 
                    class="form-control" 
                    name="full_name" 
                    id="full_name"
-                   placeholder="Enter student's full name / വിദ്യാർത്ഥിയുടെ പൂർണ്ണമായ പേര് നൽകുക" 
+                   placeholder="Enter student's full name" 
                    required>
-            <span class="input-hint english">As per birth certificate or school records</span>
-            <span class="input-hint-ml malayalam">ജനന സർട്ടിഫിക്കറ്റ് അല്ലെങ്കിൽ സ്കൂൾ രേഖകൾ പോലെ</span>
           </div>
         </div>
 
@@ -874,16 +864,14 @@
           <div class="label-group">
             <div class="label-main english">
               <i class="fas fa-home me-1"></i>
-              House Name
+              House Name& Address
             </div>
-            <div class="label-sub malayalam">വീട്ടുപേര്</div>
+            <div class="label-sub malayalam">വീട്ടുപേര്,വിലാസം</div>
             <input type="text" 
                    class="form-control" 
                    name="house_name" 
                    id="house_name"
-                   placeholder="House name (optional) / വീട്ടുപേര് (ഓപ്ഷണൽ)">
-            <span class="input-hint english">Optional - Family house name</span>
-            <span class="input-hint-ml malayalam">ഓപ്ഷണൽ - കുടുംബ വീട്ടുപേര്</span>
+                   placeholder="House name (optional)">
           </div>
         </div>
 
