--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admission Form 2026-27 / പ്രവേശന അപേക്ഷ 2026-27 | Noorussalam Madrasa</title>
+  <title>Admission | Noorussalam Madrasa</title>
   
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -888,8 +888,6 @@
                    name="dob" 
                    id="dob"
                    required>
-            <span class="input-hint english">Student's date of birth (Age should be 4+ years)</span>
-            <span class="input-hint-ml malayalam">വിദ്യാർത്ഥിയുടെ ജനന തീയതി (വയസ്സ് 4+ ആയിരിക്കണം)</span>
           </div>
         </div>
 
@@ -902,7 +900,7 @@
             </div>
             <div class="label-sub malayalam">ലിംഗം</div>
             <select class="form-select" name="gender" id="gender" required>
-              <option value="" selected disabled>Select Gender / ലിംഗം തിരഞ്ഞെടുക്കുക</option>
+              <option value="" selected disabled>Select Gender</option>
               <option value="Male">Male / ആൺ</option>
               <option value="Female">Female / പെൺ</option>
             </select>
@@ -940,7 +938,7 @@
                    class="form-control" 
                    name="phone" 
                    id="phone"
-                   placeholder="10-digit mobile number / 10 അക്ക മൊബൈൽ നമ്പർ" 
+                   placeholder="10-digit mobile number" 
                    required
                    pattern="[0-9]{10}"
                    maxlength="10"
@@ -962,18 +960,10 @@
                    class="form-control" 
                    name="aadhar_number" 
                    id="aadhar_number"
-                   placeholder="12-digit Aadhar number (optional) / 12 അക്ക ആധാർ നമ്പർ (ഓപ്ഷണൽ)"
+                   placeholder="12-digit Aadhar number (optional)"
                    pattern="[0-9]{12}"
                    maxlength="12"
                    inputmode="numeric">
-            <div class="d-flex justify-content-between">
-              <span class="input-hint english">12-digit Aadhar number (Optional - if available)</span>
-              <span class="optional-text english">Optional</span>
-            </div>
-            <div class="d-flex justify-content-between">
-              <span class="input-hint-ml malayalam">12 അക്ക ആധാർ നമ്പർ (ഓപ്ഷണൽ - ഉണ്ടെങ്കിൽ)</span>
-              <span class="optional-text-ml malayalam">ഓപ്ഷണൽ</span>
-            </div>
           </div>
         </div>
 
@@ -984,7 +974,7 @@
             <label class="form-check-label" for="declaration">
               <span class="english">I hereby declare that all the information provided above is true and correct to the best of my knowledge. I understand that any false information may lead to cancellation of admission.</span>
               <br>
-              <span class="malayalam" style="font-size: 0.9em; color: #555;">മേൽപ്പറഞ്ഞ എല്ലാ വിവരങ്ങളും എന്റെ അറിവിന്റെ പരമാവധി ശരിയും യഥാർത്ഥവുമാണെന്ന് ഞാൻ ഇവിടെ പ്രഖ്യാപിക്കുന്നു. ഏതെങ്കിലും തെറ്റായ വിവരം പ്രവേശനം റദ്ദാക്കാനിടയാക്കുമെന്ന് ഞാൻ മനസ്സിലാക്കുന്നു.</span>
+              <span class="malayalam" style="font-size: 0.9em; color: #555;">മേൽപ്പറഞ്ഞ എല്ലാ വിവരങ്ങളും എന്റെ അറിവിന്റെ പരമാവധി ശരിയും യഥാർത്ഥവുമാണെന്ന് ഞാൻ ഇവിടെ പ്രഖ്യാപിക്കുന്നു.ഓഫ്‌ലൈന്‍ അഡ്മിഷന്‍ സമയം കുട്ടിയുടെ ജനന സര്‍ട്ടിഫിക്കറ്റ്, ആധാര്‍ എന്നിവയുടെ ഫോട്ടോ കോപ്പി ഹാജറാക്കാവുന്നതാണ്‌</span>
             </label>
           </div>
         </div>
@@ -1000,7 +990,6 @@
           <p class="text-center mt-3" style="color: #666; font-size: 0.9rem;">
             <i class="fas fa-lock me-1"></i> 
             <span class="english">Your information is secure and will not be shared</span>
-            <span class="malayalam"> | നിങ്ങളുടെ വിവരങ്ങൾ സുരക്ഷിതമാണ് പങ്കിടില്ല</span>
           </p>
         </div>
       </div>
