--- a/forms.html
+++ b/forms.html
@@ -1893,8 +1893,7 @@
   
   // Set current year in footer
   const currentYear = new Date().getFullYear();
-  document.getElementById('currentYear').textContent = currentYear;
-  document.getElementById('currentYearML').textContent = currentYear;
+  document.getElementById('year').textContent = currentYear;
   
   // Navbar scroll effect
   window.addEventListener('scroll', function() {
