--- a/resulthome.html
+++ b/resulthome.html
@@ -1349,7 +1349,7 @@
                 
                 <!-- Class Toppers Button Container -->
                 <div class="toppers-btn-container" id="toppersBtnContainer">
-                    <a href="toppers.html" class="toppers-btn">
+                    <a href="coming-soon.html" class="toppers-btn">
                         <i class="fas fa-crown"></i>
                         <span>View Class Toppers & Generate Certificates</span>
                         <span class="toppers-label">NEW</span>
