--- a/coming-soon.html
+++ b/coming-soon.html
@@ -160,7 +160,7 @@
           <i class='fa-solid fa-circle-check text-success'></i>
           <h2>We’re Live!</h2>
           <p>The new section of Noorussalam Madrasa website is now available.</p>
-          <a href='index.html' class='back-btn'><i class='fa fa-home'></i> Visit Home</a>
+          <a href='resulthome.html' class='back-btn'><i class='fa fa-home'></i> Visit Home</a>
         `;
       }
     }, 1000);
