--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="DARUNNAJATH SHAREEATH & ARTS COLLEGE, Under DARUNNAJATH ISLAMIC CENTRE-KARUVARAKUNDU, Affiliated With JAMIA NOORIYYA ARABIYYA-PATTIKKAD.">
+  <link rel="icon" type="image/png" href="./favicon.png">
   <title>Noorussalam Madrasa | Home</title>
 
   <!-- Bootstrap & Icons -->
@@ -3928,6 +3930,7 @@
 
 </body>
 </html>
+
 
 
 
