--- a/result.html
+++ b/result.html
@@ -503,7 +503,7 @@
     // ============================================
     
     // SET YOUR ANNUAL RESULTS PAGE URL HERE
-    const ANNUAL_RESULTS_URL = "resultpage.html"; // Change this to your actual results page
+    const ANNUAL_RESULTS_URL = "resulthome.html"; // Change this to your actual results page
     
     // Samastha results URL (already configured)
     const SAMASTHA_RESULTS_URL = "https://result.samastha.info/";
@@ -727,3 +727,4 @@
   </script>
 </body>
 </html>
+
