--- a/resulthome.html
+++ b/resulthome.html
@@ -2123,7 +2123,7 @@ function displayResult(data) {
             <!-- Action Buttons -->
             <div class="no-print action-buttons">
                 <button class="action-btn btn-home" onclick="goToHome()">
-                    <i class="fas fa-home"></i> Home
+                    <i class="fas fa-redo"></i> Check Another 
                 </button>
                 <button class="action-btn btn-check" onclick="showForm()">
                     <i class="fas fa-redo"></i> Check Another
