--- a/resulthome.html
+++ b/resulthome.html
@@ -1351,7 +1351,7 @@
                 <div class="toppers-btn-container" id="toppersBtnContainer">
                     <a href="coming-soon.html" class="toppers-btn">
                         <i class="fas fa-crown"></i>
-                        <span>View Class Toppers & Generate Certificates</span>
+                        <span>View Class Toppers & Poster</span>
                         <span class="toppers-label">NEW</span>
                     </a>
                 </div>
@@ -1490,10 +1490,6 @@
         </footer>
     </div>
 
-    <!-- Floating Home Button -->
-    <div class="floating-home-btn no-print" onclick="goToHome()" title="Go to Home">
-        <i class="fas fa-home"></i>
-    </div>
 
     <script>
 // Google Apps Script URL
