--- a/resulthome.html
+++ b/resulthome.html
@@ -1490,6 +1490,10 @@
         </footer>
     </div>
 
+    <!-- Floating Home Button -->
+    <div class="floating-home-btn no-print" onclick="goToHome()" title="Go to Home">
+        <i class="fas fa-home"></i>
+    </div>
 
     <script>
 // Google Apps Script URL
