--- a/toppers.html
+++ b/toppers.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>🎓 Class Topper Certificate Generator — Noorussalam Madrasa</title>
+<title> Class Toppers | Noorussalam Madrasa</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
@@ -485,10 +485,6 @@ body::before {
   gap: 10px;
 }
 
-.class-header h3::before {
-  content: "🎓";
-  font-size: 18px;
-}
 
 /* Topper Cards - Beautiful Compact Design */
 .topper-card {
@@ -1228,8 +1224,8 @@ body::before {
         </div>
         <div>
           <h1>NOORUSSALAM MADRASA</h1>
-          <p class="subtitle">Annual Examination Results 2025-2026</p>
-          <p class="tagline">Celebrating Excellence in Education</p>
+          <p class="subtitle">Annual Examination Results 2025-26</p>
+          <p class="tagline">Celebrating Excellence</p>
         </div>
       </div>
       
@@ -1305,7 +1301,7 @@ body::before {
       <h3>Noorussalam Madrasa</h3>
       <p>Kambippalam-Kerala Estate • Academic Year 2025-2026</p>
       <p>Certificates Generated: <span class="cert-count" id="certCountFooter">0</span></p>
-      <p>Designed with <i class="fas fa-heart heart"></i> to celebrate student achievements</p>
+      <p>Designed with <i class="fas fa-heart heart"></i> By Suhail Kerala</p>
       <p style="margin-top: 15px; font-size: 12px; color: #94a3b8;">© 2025-2026 All Rights Reserved</p>
     </div>
   </footer>
@@ -1314,7 +1310,7 @@ body::before {
 <!-- Loading Overlay -->
 <div class="loading" id="loading">
   <div class="loading-spinner"></div>
-  <p id="loadingText">Generating Beautiful Certificate...</p>
+  <p id="loadingText">Generating Beautiful Poster...</p>
 </div>
 
 <!-- Certificate Preview Modal -->
@@ -1342,7 +1338,7 @@ body::before {
 
 <script>
 // Certificate background image URL
-const CERT_BG = "https://i.ibb.co/M5ZH2Svc/NSM-TOPPER-copy.jpg";
+const CERT_BG = "https://i.ibb.co/HD0wD3Vg/NSM-TOPPER-copy.jpg";
 
 // Class data with two toppers per class (First and Second)
 const classesData = [
