--- a/toppers.html
+++ b/toppers.html
@@ -1338,7 +1338,7 @@ body::before {
 
 <script>
 // Certificate background image URL
-const CERT_BG = "https://i.ibb.co/HD0wD3Vg/NSM-TOPPER-copy.jpg";
+const CERT_BG = "NSM TOPPER copy (1).webp";
 
 // Class data with two toppers per class (First and Second)
 const classesData = [
