--- a/toppers.html
+++ b/toppers.html
@@ -1106,7 +1106,7 @@ body {
 
 <script>
 // Configuration
-const CERT_BG = "NSM TOPPER copy (1).webp";
+const CERT_BG = "https://i.postimg.cc/tTMcqCHw/NSM-TOPPER-copy.jpg";
 
 // Admin credentials (in production, this should be stored securely on a server)
 const ADMIN_CREDENTIALS = {
