--- a/toppers.html
+++ b/toppers.html
@@ -1496,7 +1496,7 @@ body::before {
 
 <script>
 // Certificate background image URL
-const CERT_BG = "NSM TOPPER copy (1).webp";
+const CERT_BG = "https://i.postimg.cc/tTMcqCHw/NSM-TOPPER-copy.jpg";
 
 // Class data with two toppers per class (First and Second)
 const classesData = [
