--- a/toppers.html
+++ b/toppers.html
@@ -62,29 +62,15 @@
 
 /* === BODY & BACKGROUND === */
 body {
-  background: linear-gradient(135deg, #f0f5ff 0%, #e8f0ff 100%);
+  background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
   background-attachment: fixed;
   color: var(--dark);
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   position: relative;
   overflow-x: hidden;
   min-height: 100vh;
   padding: 15px;
   font-size: 14px;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 300px;
-  background: 
-    linear-gradient(135deg, rgba(26, 35, 126, 0.03) 0%, rgba(255, 215, 0, 0.02) 100%),
-    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200"><path d="M100,50 Q150,100 100,150 Q50,100 100,50" fill="none" stroke="rgba(26, 35, 126, 0.03)" stroke-width="1"/></svg>');
-  background-size: 400px;
-  z-index: -1;
 }
 
 .wrap {
@@ -171,7 +157,7 @@ body::before {
 }
 
 .header h1 {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 32px;
   font-weight: 800;
   background: var(--gradient-primary);
@@ -280,7 +266,7 @@ body::before {
 }
 
 .stat-number {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 34px;
   font-weight: 800;
   background: var(--gradient-primary);
@@ -331,7 +317,7 @@ body::before {
 }
 
 .search-header h3 {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 24px;
   font-weight: 700;
   color: var(--primary);
@@ -386,7 +372,7 @@ body::before {
   padding: 15px 18px 15px 45px;
   border: 2px solid #e3e8ff;
   border-radius: var(--radius);
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: var(--dark);
@@ -406,7 +392,7 @@ body::before {
   padding: 15px 30px;
   border: none;
   border-radius: var(--radius);
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 600;
   font-size: 14px;
   cursor: pointer;
@@ -445,7 +431,7 @@ body::before {
   background: rgba(255, 255, 255, 0.9);
   border: 2px solid #e3e8ff;
   border-radius: 50px;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   color: var(--primary);
   font-weight: 600;
   font-size: 12px;
@@ -486,7 +472,7 @@ body::before {
 }
 
 .classes-header h2 {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 28px;
   font-weight: 700;
   color: var(--primary);
@@ -564,7 +550,7 @@ body::before {
 }
 
 .class-header h3 {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 20px;
   color: var(--primary);
   font-weight: 700;
@@ -632,7 +618,7 @@ body::before {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 800;
   font-size: 16px;
   color: var(--white);
@@ -677,7 +663,7 @@ body::before {
   color: var(--white);
   border: none;
   border-radius: 50px;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 600;
   font-size: 13px;
   cursor: pointer;
@@ -714,7 +700,7 @@ body::before {
 
 .student-name {
   text-align: center;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 18px;
   font-weight: 700;
   background: linear-gradient(135deg, var(--primary), var(--accent));
@@ -728,7 +714,7 @@ body::before {
 
 .rank-label {
   text-align: center;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 700;
   margin: 8px 0;
   font-size: 12px;
@@ -758,7 +744,7 @@ body::before {
 
 .student-meta {
   text-align: center;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   color: var(--accent);
   font-weight: 600;
   margin: 10px 0;
@@ -784,7 +770,7 @@ body::before {
   border-radius: var(--radius);
   border: none;
   cursor: pointer;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 600;
   font-size: 13px;
   transition: var(--transition);
@@ -835,7 +821,7 @@ body::before {
   color: var(--white);
   border: none;
   border-radius: 50px;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 600;
   font-size: 14px;
   cursor: pointer;
@@ -908,7 +894,7 @@ body::before {
 }
 
 .footer h3 {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 20px;
   font-weight: 700;
   color: var(--primary);
@@ -922,7 +908,7 @@ body::before {
 }
 
 .cert-count {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 800;
   color: var(--primary);
   font-size: 20px;
@@ -976,7 +962,7 @@ body::before {
 }
 
 #loadingText {
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.8px;
@@ -1059,7 +1045,7 @@ body::before {
   padding: 14px 28px;
   border: none;
   border-radius: 12px;
-  font-family: "Anek Tamil", sans-serif; /* Changed to Anek Tamil */
+  font-family: "Anek Tamil", sans-serif;
   font-weight: 600;
   cursor: pointer;
   display: flex;
@@ -1132,41 +1118,6 @@ body::before {
   border-radius: 20px;
   box-shadow: var(--shadow-xl);
   border: 2px solid rgba(255, 255, 255, 0.1);
-}
-
-/* === FLOATING ELEMENTS === */
-.floating-elements {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: -1;
-  opacity: 0.5;
-}
-
-.floating-element {
-  position: absolute;
-  background: linear-gradient(135deg, 
-    rgba(26, 35, 126, 0.05) 0%, 
-    rgba(255, 215, 0, 0.03) 100%);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(5px);
-  border-radius: 50%;
-  animation: float 20s infinite ease-in-out;
-}
-
-@keyframes float {
-  0%, 100% { 
-    transform: translate(0, 0) rotate(0deg) scale(1); 
-  }
-  33% { 
-    transform: translate(30px, -20px) rotate(120deg) scale(1.1); 
-  }
-  66% { 
-    transform: translate(-20px, 30px) rotate(240deg) scale(0.9); 
-  }
 }
 
 /* === SUCCESS ANIMATION === */
@@ -1363,15 +1314,6 @@ body::before {
 </head>
 <body>
 
-<!-- Floating Elements -->
-<div class="floating-elements">
-  <div class="floating-element" style="width: 80px; height: 80px; top: 10%; left: 5%; animation-delay: 0s;"></div>
-  <div class="floating-element" style="width: 120px; height: 120px; top: 60%; right: 5%; animation-delay: 2s;"></div>
-  <div class="floating-element" style="width: 60px; height: 60px; bottom: 20%; left: 15%; animation-delay: 4s;"></div>
-  <div class="floating-element" style="width: 100px; height: 100px; top: 20%; right: 15%; animation-delay: 6s;"></div>
-  <div class="floating-element" style="width: 70px; height: 70px; bottom: 10%; right: 20%; animation-delay: 8s;"></div>
-</div>
-
 <div class="wrap">
   <!-- Header Section -->
   <header class="header">
@@ -1496,7 +1438,7 @@ body::before {
 
 <script>
 // Configuration
-const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxfy34uxFsoWVWGOXn3eDRS7kiKwBLNStfq-xTAzaKNgawrTrpgzXXNkTBzzedjB0Cc/exec'; // Replace with your Apps Script URL
+const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxfy34uxFsoWVWGOXn3eDRS7kiKwBLNStfq-xTAzaKNgawrTrpgzXXNkTBzzedjB0Cc/exec';
 const CERT_BG = "https://i.postimg.cc/tTMcqCHw/NSM-TOPPER-copy.jpg";
 
 // Global variables
@@ -1535,7 +1477,7 @@ function updateStatsDisplay(stats) {
 // Fetch data from Google Sheets
 async function fetchDataFromSheets() {
   try {
-    showLoading('Fetching data from Google Sheets...');
+    showLoading('Fetching data...');
     
     const response = await fetch(`${APPS_SCRIPT_URL}?action=getToppersData`);
     const result = await response.json();
@@ -2411,26 +2353,6 @@ window.addEventListener('load', async function() {
   setTimeout(() => {
     document.getElementById('classSearch').focus();
   }, 500);
-  
-  // Add floating elements dynamically
-  const floatingContainer = document.querySelector('.floating-elements');
-  for (let i = 0; i < 5; i++) {
-    const element = document.createElement('div');
-    element.className = 'floating-element';
-    const size = Math.random() * 60 + 40;
-    const top = Math.random() * 80 + 10;
-    const left = Math.random() * 80 + 10;
-    const delay = Math.random() * 20;
-    element.style.cssText = `
-      width: ${size}px;
-      height: ${size}px;
-      top: ${top}%;
-      left: ${left}%;
-      background: linear-gradient(135deg, rgba(${i % 2 ? '26, 35, 126' : '255, 215, 0'}, 0.05) 0%, rgba(${i % 3 ? '59, 130, 246' : '5, 150, 105'}, 0.03) 100%);
-      animation-delay: ${delay}s;
-    `;
-    floatingContainer.appendChild(element);
-  }
 });
 </script>
 </body>
