--- a/toppers.html
+++ b/toppers.html
@@ -1439,7 +1439,7 @@ body {
 <script>
 // Configuration
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxfy34uxFsoWVWGOXn3eDRS7kiKwBLNStfq-xTAzaKNgawrTrpgzXXNkTBzzedjB0Cc/exec';
-const CERT_BG = "https://i.postimg.cc/tTMcqCHw/NSM-TOPPER-copy.jpg";
+const CERT_BG = "https://i.postimg.cc/fLShP7BV/NSM-TOPPER-copy.jpg";
 
 // Global variables
 let classesData = []; // Will be populated from Google Sheets
@@ -1477,7 +1477,7 @@ function updateStatsDisplay(stats) {
 // Fetch data from Google Sheets
 async function fetchDataFromSheets() {
   try {
-    showLoading('Fetching data...');
+    showLoading('Fetching data.please wait...');
     
     const response = await fetch(`${APPS_SCRIPT_URL}?action=getToppersData`);
     const result = await response.json();
