--- a/resulthome.html
+++ b/resulthome.html
@@ -1341,7 +1341,7 @@
                     <i class="fas fa-home"></i>
                 </button>
                 <img src="https://i.ibb.co/hRD6Hsj9/nsm-logo-removebg-preview.png" alt="College Logo" class="college-logo">
-                <h1 class="college-name">NOORUSSALAM SECONDARY MADRASA</h1>
+                <h1 class="college-name">NOORUSSALAM MADRASA</h1>
                 <p class="college-tagline">Kambippalam, Kerala Estate, Malappuram</p>
                 <div class="exam-title">
                     <i class="fas fa-graduation-cap"></i> ACADEMIC RESULTS PORTAL 2025-26
@@ -1497,7 +1497,7 @@
 
     <script>
 // Google Apps Script URL
-const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwbLIHPnsI2jEJTsV_2PFuKghKBnvB8R6snBcXlbM1ErIFtpopmZg-tl9Jx9lOMJEgscA/exec';
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw8m6t2QxkezDGvOWPso1baWXfX85Km7y7uGDrHa5cgTZL2lPlkrcMtrd0SKV4mPk1O8g/exec';
 
 // DOM Elements
 const countdownContainer = document.getElementById('countdownContainer');
