--- a/resulthome.html
+++ b/resulthome.html
@@ -1341,7 +1341,7 @@
                     <i class="fas fa-home"></i>
                 </button>
                 <img src="https://i.ibb.co/hRD6Hsj9/nsm-logo-removebg-preview.png" alt="College Logo" class="college-logo">
-                <h1 class="college-name">NOORUSSALAM MADRASA</h1>
+                <h1 class="college-name">NOORUSSALAM SECONDARY MADRASA</h1>
                 <p class="college-tagline">Kambippalam, Kerala Estate, Malappuram</p>
                 <div class="exam-title">
                     <i class="fas fa-graduation-cap"></i> ACADEMIC RESULTS PORTAL 2025-26
